# ekstre-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/banks/: banks.yml
core/examples/: pdfcheck.rs  realcheck.rs  seed.rs
core/src/: banks.rs  db.rs  format.rs  imap.rs  lib.rs  matcher.rs  parser.rs  pdf.rs
core/tests/: format_matcher.rs  golden.rs
core/tests/fixtures/: akbank.txt  enpara.txt  enpara_nocard.txt  garanti.txt  is.txt  teb.txt  yapikredi.txt  ziraat.txt
docs/: RELEASING.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scheduler.rs  state.rs
ui/: app.js  index.html  providers.js  settings.html  settings.js  styles.css  theme.js  wizard.css  wizard.html  wizard.js
