# Own workspace root so this app builds into src-tauri/target (see ../Cargo.toml).
[workspace]

[package]
name = "ekstre-desktop"
version = "0.3.2"
edition = "2021"
description = "Ekstre — Turkish credit-card statement tracker for the desktop"
license = "MIT"

[lib]
name = "ekstre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ekstre-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
